Changes in SS, SU, index
Perdue University added to SS.
Changed links and buttins in index, SS, SU
AZOV and Comeback Alive in SU

--- a/SS.html
+++ b/SS.html
@@ -27,7 +27,7 @@
 							<ul class="links">
 								<li><a href="index.html">Stories</a></li>
 								<li class="active"><a href="SS.html">Support for Students</a></li>
-								<li><a href="elements.html">Support for Ukraine</a></li>
+								<li><a href="SU.html">Support for Ukraine</a></li>
 								<li><a href="generic.html">About the project</a></li>
 								<li><a href="elements.html">Tell your story</a></li>
 							</ul>
@@ -62,9 +62,21 @@
 									<li> Emergency Relief Program for Scholars and Students at Risk by
 										<a href="https://www.u-tokyo.ac.jp/focus/en/articles/z1311_00081.html?fbclid=IwAR1nPRoWnySMqlZXjF1r1mmW-e3tesBKDefo7DJAEEEuHaxkFgLNySS-CDw">the University of Tokyo</a>.
 									</li>
+									<li> Program by
+										<a href="https://www.purdue.edu/newsroom/releases/2022/Q1/new-purdue-program-would-welcome-visiting-scholars-from-ukraine-who-have-been-displaced-by-the-war.html?fbclid=IwAR25-ZN-nqgaRCpe_Z-hYSd0wa1THDM28RAoK_bzPWw45Ke9Y1W7PSNCWw8">Purdue University</a>.
+									</li>
 									</ol>
 									<hr />
 
-								
+									<h4>Other useful resources:</h4>
+									<ol>
+									<li>Find job in
+										<a href="https://www.jobbank.gc.ca/report_note.do?cid=18538">Canada</a>.
+									</li>
+									<li>Ukrainian Canadian
+									<a href="ssc.adm.ubc.ca/sscportal/servlets/SSCMain.jsp?function=Awards Inquiry">Congress </a>.</li>
+									</ol>
+									<hr />
+
 	</body>
 </html>
