--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Stories</a></li>
 							<li><a href="SS.html">Support for Students</a></li>
-							<li><a href="elements.html">Support for Ukraine</a></li>
+							<li><a href="SU.html">Support for Ukraine</a></li>
 							<li><a href="generic.html">About the project</a></li>
 							<li><a href="elements.html">Tell your story</a></li>
 						</ul>
