--- a/SS.html
+++ b/SS.html
@@ -28,8 +28,8 @@
 								<li><a href="index.html">Stories</a></li>
 								<li class="active"><a href="SS.html">Support for Students</a></li>
 								<li><a href="SU.html">Support for Ukraine</a></li>
-								<li><a href="generic.html">About the project</a></li>
-								<li><a href="elements.html">Tell your story</a></li>
+								<li><a href="About.html">About the project</a></li>
+								<li><a href="Form.html">Tell your story</a></li>
 							</ul>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
