--- a/Form.html
+++ b/Form.html
@@ -56,7 +56,7 @@
 											<!-- Break -->
 											<div class="col-12">
 												<select name="demo-category" id="demo-category">
-													<option value="">- Which category fits your story most?-</option>
+													<option value="">- What category fits your story most?-</option>
 													<option value="1">I was in occupied town.</option>
 													<option value="1">I serve in Ukrainian army or territory defence.</option>
 													<option value="1">War affected my education.</option>
