--- a/SU.html
+++ b/SU.html
@@ -57,9 +57,23 @@
 									<li>Come Back Alive
 										<a href="https://savelife.in.ua/en/donate/">Fund</a>.
 									</li>
+									<li>Ukraine’s Armed Forces NBU Opens Special Account to Raise Funds
+										<a href="https://bank.gov.ua/en/news/all/natsionalniy-bank-vidkriv-spetsrahunok-dlya-zboru-koshtiv-na-potrebi-armiyi">NBU Opens Special Account</a>.
+									</li>
 									<li>Frontline AZOV
 									<a href="https://azov.org.ua/donate/">battalion</a>.</li>
 									</ol>
 									<hr />
+
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
