--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="FirstStory.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -83,7 +83,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="FirstStory.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
