Care page added

--- a/SS.html
+++ b/SS.html
@@ -70,6 +70,9 @@
 
 									<h4>Other useful resources:</h4>
 									<ol>
+										<li>How to immigrate to
+											<a href="https://www.neodyn.ca/">Canada</a>.
+										</li>
 									<li>Find job in
 										<a href="https://www.jobbank.gc.ca/report_note.do?cid=18538">Canada</a>.
 									</li>
