--- a/SU.html
+++ b/SU.html
@@ -51,6 +51,10 @@
 
 
 								<!-- Text stuff -->
+								<p>
+									<b> <a href="Care.html"> Why should I care about Ukraine?</b></a>.
+								</p>
+								<hr/>
 								<!-- Text stuff -->
 									<h4>Support Ukrainian Army:</h4>
 									<ol>
@@ -62,6 +66,8 @@
 									</li>
 									<li>Frontline AZOV
 									<a href="https://azov.org.ua/donate/">battalion</a>.</li>
+									<li>Save Ukraine
+									<a href="https://www.saveukrainenow.if.ua/en/">Now</a>.</li>
 									</ol>
 									<hr />
 
